--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,81 @@
-.App {
-  text-align: center;
+body
+{
+    background-image: url('../public/images/background.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    
+}
+main
+{
+   background-color: rgba(0, 0, 0, 0.616);
+   
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+.model
+{
+    width: 300px;
+    height: 400px;
+    background-image: url('../public/images/model.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+    border-radius: 10px;
+    & .glass
+    {
+        /* background: red; */
+        width: 200px;
+        height: 50px;
+        position: absolute;
+        top: 105px;
+        left: 50px;
+        display: none;
+        & img
+        {
+            width: 100%;
+            height: 100%;
+            opacity: .7;
+        }
+    }
+    & .glassDetail
+    {
+        display: none;
+        position: absolute;
+        padding: 10px;
+        background-color: rgba(243,166,112,.5);
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 120px;
+        border-radius: 0 0 10px 10px;
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+        & h5
+        {
+            color: blue;
+        }
+        & p
+        {
+            color: #fff;
+            font-weight: bold;
+        }
+    }
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.SelectGlasses
+{
+    width: 1000px;
+    /* height: 200px; */
+    background: #ffffff21;
+    color:#fff;
+    border-radius: 10px;
+    & .card-body
+    {
+        background: #ffffff21;
+    }
 }
